--- a/app/views/minions/show.html.erb
+++ b/app/views/minions/show.html.erb
@@ -1,19 +1,21 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @minion.name %>
+<p id="notice">
+    <%= notice %>
 </p>
 
 <p>
-  <strong>Description:</strong>
-  <%= @minion.description %>
+    <strong>Name:</strong>
+    <%= @minion.name %>
 </p>
 
 <p>
-  <strong>Super villain:</strong>
-  <%= @minion.super_villain_id %>
+    <strong>Description:</strong>
+    <%= @minion.description %>
+</p>
+
+<p>
+    <strong>Super villain:</strong>
+    <%= @minion.super_villain.name %>
 </p>
 
 <%= link_to 'Edit', edit_minion_path(@minion) %> |
-<%= link_to 'Back', minions_path %>
+    <%= link_to 'Back', minions_path %>
