--- a/app/views/super_villains/show.html.erb
+++ b/app/views/super_villains/show.html.erb
@@ -1,14 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @super_villain.name %>
+<p id="notice">
+    <%= notice %>
 </p>
 
 <p>
-  <strong>Description:</strong>
-  <%= @super_villain.description %>
+    <strong>Name:</strong>
+    <%= @super_villain.name %>
+</p>
+
+<p>
+    <strong>Description:</strong>
+    <%= @super_villain.description %>
+</p>
+
+<p>
+    <strong>Minions:</strong>
+    <% @super_villain.minions.each do |minion| %>
+        <%= minion.name %>
+            <% end %>
 </p>
 
 <%= link_to 'Edit', edit_super_villain_path(@super_villain) %> |
-<%= link_to 'Back', super_villains_path %>
+    <%= link_to 'Back', super_villains_path %>
